@@ -179,21 +179,23 @@ BEGIN
     CONTROL         "Enabled",IDC_FLIPPER_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,76,85,43,10
 END
 
-IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 132
+IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 135
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Custom2",7,"ColorControl",WS_TABSTOP,45,7,40,14
     CONTROL         "Custom2",15,"ColorControl",WS_TABSTOP,45,25,40,14
     COMBOBOX        DISPID_Image,7,51,111,69,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        8,44,65,40,12,ES_AUTOHSCROLL
-    EDITTEXT        6,44,82,40,12,ES_AUTOHSCROLL
-    CONTROL         "Casts Shadow",107,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,95,61,10
-    CONTROL         "Visible",109,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,105,61,10
-    CONTROL         "Side Visible",110,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,115,61,10
+    EDITTEXT        8,60,65,40,12,ES_AUTOHSCROLL
+    EDITTEXT        6,60,79,40,12,ES_AUTOHSCROLL
+    EDITTEXT        24,60,93,40,12,ES_AUTOHSCROLL
+    CONTROL         "Casts Shadow",107,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,105,61,10
+    CONTROL         "Visible",109,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,115,61,10
+    CONTROL         "Side Visible",110,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,125,61,10
     LTEXT           "&Color",IDC_STATIC,7,10,20,9
     LTEXT           "&Radius",IDC_STATIC,7,67,23,9
-    LTEXT           "&Overhang",IDC_STATIC,7,83,36,9
+    LTEXT           "&Overhang",IDC_STATIC,7,80,36,9
+    LTEXT           "&Height Offset",IDC_STATIC,7,93,50,9
     LTEXT           "I&mage:",IDC_STATIC,7,42,22,8
     LTEXT           "Si&de Color",IDC_STATIC,7,30,35,9
 END
